--- a/cuidados/package.json
+++ b/cuidados/package.json
@@ -8,14 +8,17 @@
     "@mui/icons-material": "^5.2.0",
     "@mui/lab": "^5.0.0-alpha.58",
     "@mui/material": "^5.2.2",
+    "@react-leaflet/core": "^1.0.2",
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "date-fns": "^2.27.0",
     "i18next": "^21.5.4",
+    "leaflet": "^1.7.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-i18next": "^11.14.3",
+    "react-leaflet": "^3.1.0",
     "react-material-ui-carousel": "^3.1.1",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
