--- a/cuidados/package.json
+++ b/cuidados/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage":"https://manu-grande-lope.github.io/proyecto-final-front",
+  "homepage":"https://manu-grande-lope.github.io/WeCare",
   "name": "cuidados",
   "version": "0.1.0",
   "private": true,
